--- a/force-app/main/default/classes/ApplicationInfo.cls
+++ b/force-app/main/default/classes/ApplicationInfo.cls
@@ -15,6 +15,7 @@
 
 public class ApplicationInfo {
     public PaymentSource adyenPaymentSource = new PaymentSource();
+    public PaymentSource merchantApplication = new PaymentSource();
     public ExternalPlatform externalPlatform = new ExternalPlatform();
 
 }
