--- a/force-app/main/default/classes/AdyenClient.cls
+++ b/force-app/main/default/classes/AdyenClient.cls
@@ -1,51 +1,45 @@
 //
 // Contains the callouts to the Adyen API
 public class AdyenClient {
-    public static AuthoriseResponse authorisePayment(Merchant__mdt merchantRecord, PaymentRequest request) {
-        ccrz.ccLog.log(LoggingLevel.DEBUG,'DebugBas', request);
-        AuthoriseResponse output = new AuthoriseResponse();
+    public static PaymentResponse authorisePayment(Merchant__mdt merchantRecord, PaymentRequest request) {
+        PaymentResponse paymentResponse = new PaymentResponse();
         try {
             Http httpClient = new Http();
-            HttpRequest httpReq = new HttpRequest();
-            httpReq.setEndpoint(merchantRecord.Payment_Endpoint__c);
-            httpReq.setMethod('POST');
-            httpReq.setHeader('X-API-KEY', merchantRecord.API_Key__c);
-            httpReq.setHeader('Content-Type', 'application/json');
             String jsonString = JSON.serialize(request, true);
-            jsonString = Util.makeAdyenCompatible(jsonString);
-            System.Debug('## Raw request '+jsonString);
-            httpReq.setBody(jsonString);
+            HttpRequest httpReq = createHttpRequest(merchantRecord.API_Key__c, merchantRecord.Payment_Endpoint__c, jsonString);
+            System.Debug('## Raw request '+ httpReq);
             HttpResponse httpResp = httpClient.send(httpReq);
-            System.Debug('## Raw response '+httpResp.getBody());
-            if(httpResp.getStatusCode() == 200) {
-                output = (AuthoriseResponse) JSON.deserialize(Util.makeSalesforceCompatible(httpResp.getBody()), AuthoriseResponse.class);
-                output.success = true;
+            System.Debug('## Raw response '+ httpResp.getBody());
+
+            if(AdyenUtil.isHttpResponseOK(httpResp.getStatusCode())) {
+                paymentResponse = (PaymentResponse) JSON.deserialize(Util.makeSalesforceCompatible(httpResp.getBody()), PaymentResponse.class);
+//                output.success = true;
             } else {
-                output.errorDetail =  (Error) JSON.deserialize(httpResp.getBody(), Error.class);
-                if(output.errorDetail.status==null) {
-                    output.errorDetail.status = httpResp.getStatusCode();
-                }
-                output.success = false;
+//                output.errorDetail =  (Error) JSON.deserialize(httpResp.getBody(), Error.class);
+//                if(output.errorDetail.status==null) {
+//                    output.errorDetail.status = httpResp.getStatusCode();
+//                }
+//                output.success = false;
             }
         }
         catch(Exception e) {
-            output.errorDetail = new Error();
-            output.errorDetail.message = 'Adyen callout failed: '+e.getMessage();
-            output.success = false;
+//            output.errorDetail = new Error();
+//            output.errorDetail.message = 'Adyen callout failed: '+e.getMessage();
+//            output.success = false;
         }
-        return output;
+        return paymentResponse;
     }
 
-    public static OASPaymentMethodsResponse getPaymentMethods(Merchant__mdt merchantRecord, OASPaymentMethodsRequest request){
-        OASPaymentMethodsResponse paymentMethods = new OASPaymentMethodsResponse();
+    public static PaymentMethodsResponse getPaymentMethods(Merchant__mdt merchantRecord, PaymentMethodsRequest request){
+        PaymentMethodsResponse paymentMethods = new PaymentMethodsResponse();
         try {
             Http httpClient = new Http();
             String jsonString = JSON.serialize(request, true);
             HttpRequest httpReq = createHttpRequest(merchantRecord.API_Key__c, merchantRecord.PaymentMethods_Endpoint__c, jsonString);
             HttpResponse httpResp = httpClient.send(httpReq);
 
-            if(isHttpResponseOK(httpResp.getStatusCode())) {
-                paymentMethods = (OASPaymentMethodsResponse) JSON.deserialize(Util.makeSalesforceCompatible(httpResp.getBody()), OASPaymentMethodsResponse.class);
+            if(AdyenUtil.isHttpResponseOK(httpResp.getStatusCode())) {
+                paymentMethods = (PaymentMethodsResponse) JSON.deserialize(Util.makeSalesforceCompatible(httpResp.getBody()), PaymentMethodsResponse.class);
             } else {
                 System.Debug('## Raw response invalid /paymentMethods request');
             }
@@ -65,11 +59,6 @@ public class AdyenClient {
         request = Util.makeAdyenCompatible(request);
         httpReq.setBody(request);
         return httpReq;
-    }
-
-    public static Boolean isHttpResponseOK(Integer responseCode){
-        List<Integer> responseOK = new List<Integer> {200, 201, 202, 204};
-        return responseOK.contains(responseCode);
     }
 
 //    public static CaptureResponse capturePayment(Merchant__mdt merchantRecord, CaptureRequest request) {
